Server: Added examples for methods descriptions in Swagger.
